apps/20-media/jellyseerr/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  template:
    spec:
      containers:
      - name: jellyseerr
        resources:
          limits:
            cpu: 500m
            memory: 633Mi
          requests:
            cpu: 78m
            memory: 422Mi
