apps/20-media/jellyseerr/overlays/prod/keda-interceptor-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keda-interceptor-proxy
  namespace: media
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
      protocol: TCP
