apps/20-media/jellyseerr/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  labels:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyseerr
    gethomepage.dev/icon: jellyseerr.png
    gethomepage.dev/group: Media
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-interceptor-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - jellyseerr.truxonline.com
      secretName: jellyseerr-tls
